--- a/index.html
+++ b/index.html
@@ -185,14 +185,21 @@ h1, .page-title{
   z-index: 9999;
   transform: translateY(0);
   opacity: 1;
-  transition: transform 0.9s cubic-bezier(.2,.7,.2,1), opacity 0.6s ease;
+  transition: transform 0.9s cubic-bezier(.2,.7,.2,1), opacity 0.4s ease;
 }
 
 #intro.hide{
   transform: translateY(-100%);
   opacity: 0;
-  visibility: hidden;
   pointer-events: none;
+}
+header, main, footer{
+  transition: opacity 0.5s ease;
+}
+
+html.intro-active main,
+html.intro-active footer{
+  opacity: 0;
 }
 
 .intro-bg{
@@ -514,15 +521,15 @@ body{
   text-underline-offset: 3px;
 }
 header{
-  opacity: 0;
-  transform: translateY(-8px);
-  transition: opacity 0.6s ease 0.2s, transform 0.6s ease 0.2s;
+  opacity: 1;
+  transform: none;
+  transition: opacity 0.5s ease;
 }
 
 html.intro-active header{
-  opacity: 0;
-  transform: translateY(-12px);
+  opacity: 0; /* verborgen tijdens intro */
 }
+
 
 html:not(.intro-active) header{
   opacity: 1;
@@ -710,21 +717,24 @@ html:not(.intro-active) header{
 <script>
   window.addEventListener("load", () => {
     const intro = document.getElementById("intro");
-    if(!intro){
-      document.documentElement.classList.remove("intro-active");
-      return;
-    }
+    if (!intro) return;
 
+    // Start na 1.6s (pas gerust aan)
     setTimeout(() => {
+      // Start slide-up
       intro.classList.add("hide");
+
+      // Toon meteen de site (header + content)
       document.documentElement.classList.remove("intro-active");
     }, 1600);
   });
 </script>
 
+
   
 </body>
 </html>
+
 
 
 
