--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="nl">
 <head>
-  <link rel="icon" href="images/logo.svg" type="image/svg+xml">
+  <link rel="icon" href="images/logo.png" type="image/svg+xml">
   <meta charset="utf-8" />
  <script>
   document.documentElement.classList.add("intro-active");
@@ -569,7 +569,7 @@ html:not(.intro-active) header{
   <div class="intro-overlay"></div>
 
   <div class="intro-logo">
-    <img src="images/logo.svg" alt="Bres" class="intro-logo-img" id="introLogo">
+    <img src="images/logo.png" alt="Bres" class="intro-logo-img" id="introLogo">
   </div>
 </div>
 
@@ -589,7 +589,7 @@ html:not(.intro-active) header{
 <header>
   <nav class="nav-center">
     <a class="brand" href="#">
-      <img src="images/logo.svg" alt="Bres" class="nav-logo" id="headerLogo">
+      <img src="images/logo.png" alt="Bres" class="nav-logo" id="headerLogo">
     </a>
   </nav>
 </header>
@@ -822,6 +822,7 @@ html:not(.intro-active) header{
   
 </body>
 </html>
+
 
 
 
