--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@ h1, .page-title{
 
 #intro.hide{
   transform: translateY(-100%);
+  pointer-events: none;
 }
 
 /* Intro logo in het midden */
@@ -744,24 +745,9 @@ html:not(.intro-active) header{
   setOpenStatus();
   setInterval(setOpenStatus, 60 * 1000);
 </script>
-<script>
-  window.addEventListener("load", () => {
-    const intro = document.getElementById("intro");
-    if (!intro) return;
 
-    // Start na 1.6s (pas gerust aan)
-    setTimeout(() => {
-      // Start slide-up
-      intro.classList.add("hide");
-
-      // Toon meteen de site (header + content)
-      document.documentElement.classList.remove("intro-active");
-    }, 1600);
-  });
-</script>
 <script>
   // Zet intro-active zo vroeg mogelijk (dit mag ook al in head staan)
-  document.documentElement.classList.add("intro-active");
 
   window.addEventListener("load", () => {
     const intro = document.getElementById("intro");
@@ -835,24 +821,10 @@ html:not(.intro-active) header{
   });
 </script>
 
-<script>
-  // meteen verbergen van content onder intro (optioneel)
-  document.documentElement.classList.add("intro-active");
-
-  window.addEventListener("load", () => {
-    const intro = document.getElementById("intro");
-    if (!intro) return;
-
-    setTimeout(() => {
-      intro.classList.add("hide");
-      document.documentElement.classList.remove("intro-active");
-    }, 1600);
-  });
-</script>
-
   
 </body>
 </html>
+
 
 
 
