--- a/index.html
+++ b/index.html
@@ -225,10 +225,7 @@ html.intro-active footer{
 .intro-bg{
   position:absolute;
   inset:0;
-  background-image:url("images/intro.svg"); /* pas aan als je andere naam hebt */
-  background-size:cover;
-  background-position:center;
-  transform:scale(1.01);
+  background: #fff;
 }
 
 .intro-overlay{
@@ -813,6 +810,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
