--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>restaurant Bres</title>
-  <meta name="description" content="restaurant Bres te Antwerpen. Contact, openingsuren en locatie." />
+  <title>Bres – Casual gemixte keuken in Antwerpen</title>
+<meta name="description" content="Bres is een restaurant in Antwerpen. Bekijk openingsuren en contactgegevens.">
   <meta name="theme-color" content="#0b0b0b" />
   <style>
    
@@ -574,6 +574,17 @@ html:not(.intro-active) header{
 .stack > div:nth-of-type(2) .page-title{
   font-size: 22px;
 }
+/* CONTACT hard kleiner + verder weg */
+.stack > div:nth-of-type(2){
+  font-size: 0.8rem !important;   /* echt duidelijk kleiner */
+  margin-top: 140px !important;  /* VEEL verder naar beneden */
+  opacity: 0.9;
+}
+
+/* Contact-titel kleiner */
+.stack > div:nth-of-type(2) .page-title{
+  font-size: 20px !important;
+}
 
 
   </style>
@@ -590,10 +601,6 @@ html:not(.intro-active) header{
   <div class="intro-logo">
     <img src="images/logo.png" alt="Bres" class="intro-logo-img" id="introLogo">
   </div>
-</div>
-
-  <div style="position:fixed;bottom:10px;right:10px;background:#fff;color:#000;padding:8px 10px;border-radius:10px;z-index:99999;font:14px system-ui;">
-  TEST UPDATE
 </div>
 
 <header>
@@ -821,6 +828,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
