--- a/index.html
+++ b/index.html
@@ -602,6 +602,23 @@ html:not(.intro-active) header{
   padding: 8px 12px;
   font-size: 0.8rem;
 }
+/* Contact (2e blok) kleiner en verder naar beneden */
+.stack > div:nth-child(2){
+  font-size: 0.8rem !important;
+  margin-top: 140px !important;
+  opacity: 0.9;
+}
+
+/* Contact titel kleiner */
+.stack > div:nth-child(2) .page-title{
+  font-size: 20px !important;
+}
+
+/* Knoppen compacter */
+.stack > div:nth-child(2) .btn{
+  padding: 8px 12px;
+  font-size: 0.8rem;
+}
 
 
   </style>
@@ -845,6 +862,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
