--- a/index.html
+++ b/index.html
@@ -151,9 +151,14 @@ html.intro-active footer{
 
     textarea{min-height:120px; resize:vertical}
     .small{font-size:13px; color:rgba(255,255,255,.72)}
-    footer{
-      border-top:1px solid var(--line);
-      background:rgba(0,0,0,.25);
+    
+   footer{
+  border-top: 1px solid #000;  /* zwarte lijn */
+  margin-top: 64px;
+  padding: 12px 0 18px;
+  text-align: center;
+  font-size: 12px;
+  color: #111;
     }
     footer .inner{
       max-width:var(--max);
@@ -619,6 +624,19 @@ html:not(.intro-active) header{
   padding: 8px 12px;
   font-size: 0.8rem;
 }
+html, body{
+  height: 100%;
+}
+
+body{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main{
+  flex: 1;   /* duwt footer naar beneden */
+}
 
 
   </style>
@@ -862,6 +880,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
