--- a/index.html
+++ b/index.html
@@ -637,6 +637,23 @@ body{
 main{
   flex: 1;   /* duwt footer naar beneden */
 }
+/* CONTACT: kleiner + verder van Openingsuren */
+.stack > div:nth-child(2){
+  margin-top: 160px !important;  /* VEEL verder naar beneden */
+  font-size: 0.8rem !important; /* duidelijk kleiner */
+  opacity: 0.9;
+}
+
+/* Contact titel kleiner */
+.stack > div:nth-child(2) .page-title{
+  font-size: 20px !important;
+}
+
+/* Knoppen compacter */
+.stack > div:nth-child(2) .btn{
+  padding: 8px 12px !important;
+  font-size: 0.8rem !important;
+}
 
 
   </style>
@@ -880,6 +897,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
