--- a/index.html
+++ b/index.html
@@ -671,6 +671,10 @@ main{
   padding: 8px 12px !important;
   font-size: 0.8rem !important;
 }
+body{
+  background-repeat: repeat;
+  image-rendering: crisp-edges;
+}
 
 
   </style>
@@ -917,6 +921,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
