--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bres – Casual gemixte keuken in Antwerpen</title>
+  <title>Restaurant Bres - Antwerpen</title>
 <meta name="description" content="Bres is een restaurant in Antwerpen. Bekijk openingsuren en contactgegevens.">
   <meta name="theme-color" content="#0b0b0b" />
   <style>
@@ -921,6 +921,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
