--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@ body{
         </div>
 
         <div class="contact-text">
-          <p>Bresstraat 10, Antwerpen</p>
+          <p>Bresstraat 10, 2018 Antwerpen</p>
           <p><a href="mailto:info@restaurantbres.be">info@restaurantbres.be</a></p>
           <p><a href="tel:+32465093915">+32 465 09 39 15</a></p>
         </div>
@@ -921,6 +921,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
