--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ header, main, footer{
 }
 /* Bakstenen SVG als subtiele achtergrond */
 body{
-  background-image: url("images/bricks.svg");
+  background-image: url("images/bricks.jpg");
   background-repeat: repeat;
   background-size: 220px auto;  /* grootte van de bakstenen */
   background-color: #ffffff;    /* wit eronder */
@@ -921,6 +921,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
