--- a/index.html
+++ b/index.html
@@ -675,7 +675,47 @@ body{
   background-repeat: repeat;
   image-rendering: crisp-edges;
 }
+body::before{
+  content:"";
+  position: fixed;
+  inset: 0;
+  background: linear-gradient(
+    rgba(255,255,255,0.92),
+    rgba(255,255,255,0.92)
+  );
+  pointer-events: none;
+  z-index: 0;
+}
 
+main, header, footer{
+  position: relative;
+  z-index: 1;
+}
+.status{
+  font-weight: 600;
+  letter-spacing: 0.04em;
+  margin-top: 8px;
+}
+
+.status-sub{
+  font-size: 0.9rem;
+  opacity: 0.7;
+}
+
+.btn{
+  border-radius: 999px;     /* pill shape */
+  padding: 10px 16px;
+  transition: all .2s ease;
+}
+
+.btn:hover{
+  transform: translateY(-1px);
+  box-shadow: 0 6px 16px rgba(0,0,0,0.08);
+}
+footer{
+  border-top: 1px solid rgba(0,0,0,0.15);
+  color: #666;
+}
 
   </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -921,6 +961,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
