--- a/index.html
+++ b/index.html
@@ -758,6 +758,21 @@ footer{
             <strong>Avond:</strong> woensdag t.e.m. zaterdag<br>
             19:00 – 22:00
           </p>
+           lunch optie site bres
+
+ <p>
+            <strong>Lunch:</strong> woensdag t.e.m. vrijdag<br>
+            12:00 – 14:30
+          </p>
+
+  <div class="hours-text">
+          <p><strong>Geopend van woensdag tot zaterdag</strong></p>
+
+<p>
+            <strong>Avond:</strong> woensdag t.e.m. zaterdag<br>
+            19:00 – 22:00
+          </p>
+
         </div>
 
         <div class="divider"></div>
@@ -950,6 +965,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
