--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Restaurant Bres - Antwerpen</title>
-<meta name="description" content="Bres is een restaurant in Antwerpen. Bekijk openingsuren en contactgegevens.">
+<meta name="description" content="Restaurant Bres te Antwerpen. Bekijk openingsuren en contactgegevens.">
   <meta name="theme-color" content="#0b0b0b" />
   <style>
    
@@ -967,6 +967,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
