--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
  <script>
   document.documentElement.classList.add("intro-active");
 </script>
+  
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&display=swap" rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Restaurant Bres - Antwerpen</title>
@@ -30,9 +32,8 @@ html.intro-active footer{
     }
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
-   body{
-  font-family: "Copperplate", "Copperplate Gothic Light", "Trajan Pro", "Didot", Georgia, serif;
-  letter-spacing: 0.04em;   /* Copperplate oogt mooier met iets meer spacing */
+body{
+  font-family: "Copperplate", "Copperplate Gothic Light", "Cinzel", serif;
 }
 
     }
@@ -967,6 +968,7 @@ const intro = intros[0];
   
 </body>
 </html>
+
 
 
 
