--- a/index.html
+++ b/index.html
@@ -754,6 +754,11 @@ html, body, button, input, textarea, a{
 /* Verberg hint zodra intro weggaat */
 #intro.hide .scroll-hint{
   opacity: 0;
+}   
+/* Maak pagina niet-scrollbaar */
+html, body{
+  height: 100%;
+  overflow: hidden;
 }    
   </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1016,6 +1021,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
