--- a/index.html
+++ b/index.html
@@ -547,8 +547,9 @@ body{
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end; /* alles naar onder */
-  padding-bottom: 120px; /* professionele ruimte onderaan */
+ justify-content: center;
+padding-top: 120px;
+padding-bottom: 120px;
 }
 
 .stack{
@@ -813,68 +814,6 @@ html, body{
     overscroll-behavior: none;
     touch-action: none; /* voorkomt swipe-scroll op mobiel */
   }
-  /* ✅ Mobile: zorg dat alles in 1 scherm past (zonder scroll) */
-@media (max-width: 600px){
-  .container.center{
-    padding: 24px 16px 28px !important; /* minder bottom padding */
-  }
-
-  .stack{
-    gap: 18px !important;               /* minder ruimte tussen blokken */
-  }
-
-  .page-title{
-    font-size: 26px !important;         /* net iets kleiner */
-  }
-
-  .status-sub{
-    font-size: 0.85rem !important;
-  }
-
-  .hours-text{
-    line-height: 1.55 !important;
-  }
-
-  .contact-text p{
-    margin: 6px 0 !important;
-  }
-
-  .btn{
-    padding: 8px 12px !important;       /* compactere knoppen */
-    font-size: 0.85rem !important;
-  }
-
-  /* 🚫 Belangrijk: verwijder/neutraliseer je oude "duw Contact naar beneden" hacks */
-  .stack > div:nth-child(2){
-    margin-top: 0 !important;
-    font-size: 0.9rem !important;
-    opacity: 1 !important;
-  }
-}
-  /* ✅ Mobile fix: body blijft "vast", maar inhoud kan scrollen (tekst verdwijnt nooit) */
-@media (max-width: 768px){
-  html, body{
-    height: 100%;
-    overflow: hidden;            /* body zelf niet scrollen */
-  }
-
-  main{
-    flex: 1;
-    overflow-y: auto;            /* ✅ inhoud mag scrollen */
-    -webkit-overflow-scrolling: touch;
-    overscroll-behavior: contain;
-  }
-
-  /* touch-action:none zorgt dat zelfs main soms niet goed scrollt */
-  body{
-    touch-action: auto !important;
-  }
-
-  /* safety: als er nog oude margin-top hacks staan, neutraliseer ze */
-  .stack > div:nth-child(2){
-    margin-top: 0 !important;
-  }
-}
   </style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1135,6 +1074,7 @@ function isBresOpen(){
 </script>
 </body>
 </html>
+
 
 
 
